# poetry-pip-conf

./: README.md  pip.conf  pyproject.toml
src/poetry_pip_conf/: plugins.py
src/poetry_plugin_pypi_mirror/: plugins.py
