[tool.poetry]
name = "poetry-pip-conf"
version = "1.0.0"
description = "Poetry plugin that read pypi indices from your pip.conf/pip.ini"
authors = ["Luis Chaves"]
license = "MIT"
keywords = ["packaging", "poetry", "pypi"]
readme = "README.md"
homepage = "https://github.com/lucharo/poetry-pip-conf"
repository = "https://github.com/lucharo/poetry-pip-conf"

[tool.poetry.dependencies]
python = "^3.7"
poetry = "~1.3.0"

[tool.poetry.plugins."poetry.plugin"]
demo = "poetry_pip_conf.plugins:PipConfPlugin"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
bandit = "^1.7.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^3.9.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src/poetry_plugin_pypi_mirror", "tests"]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[[tool.mypy.overrides]]
module = [
  'cleo.*',
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
